[package]
name = "msf_relay"
version = "0.1.0"
authors = ["Craig Smith <agent.craig@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0.27"
serde_json = "1.0.10" 
serde_derive = "1.0.27"
socketcan = "1.7.0"
time = "0.1.39" 
chrono = "0.4.0"
libc = "0.2.39" 
hex = "0.3.1"

[dependencies.clap]
version = "2.31.1"
default-features = false
features = [ "suggestions", "color" ]
